--- a/src/ContactList/ContactList.csproj
+++ b/src/ContactList/ContactList.csproj
@@ -5,6 +5,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
