Enable Nullable Reference Types

--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -1,5 +1,6 @@
 ﻿<Project>
     <PropertyGroup>
+        <Nullable>enable</Nullable>
         <FixieVersion>2.2.0</FixieVersion>
         <ShouldlyVersion>3.0.2</ShouldlyVersion>
     </PropertyGroup>
