Restore protection from ever unintentionally deploying development environment settings.

--- a/src/ContactList/ContactList.csproj
+++ b/src/ContactList/ContactList.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Content Update="appsettings.Development.json" CopyToPublishDirectory="Never" />
   </ItemGroup>
 
 </Project>
