update fixie to 3.0.0-beta.1

--- a/src/ContactList/appsettings.Development.json
+++ b/src/ContactList/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "Database": {
-    "ConnectionString": "Server=.\\;Database=ContactList-DEV;Trusted_Connection=True"
+    "ConnectionString": "Server=DESKTOP-CHANDRA\\TEW_SQLEXPRESS;Database=ContactList-DEV;Trusted_Connection=True"
   }
 }
